tests/ui/nll/ty-outlives/ty-param-fn-body.stderr
error[E0309]: the parameter type `T` may not live long enough
  --> $DIR/ty-param-fn-body.rs:17:5
   |
LL | fn region_static<'a, T>(cell: Cell<&'a usize>, t: T) {
   |                  -- the parameter type `T` must be valid for the lifetime `'a` as defined here...
LL |     outlives(cell, t)
   |     ^^^^^^^^^^^^^^^^^ ...so that the type `T` will meet its required lifetime bounds
   |
help: consider adding an explicit lifetime bound
   |
LL | fn region_static<'a, T: 'a>(cell: Cell<&'a usize>, t: T) {
   |                       ++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0309`.
